--- a/templates/Steps.html
+++ b/templates/Steps.html
@@ -13,11 +13,11 @@
         onShown: function() {
             console.log('Checking our the events huh?');
         },
-        onNavigate: function(direction, itemIndex)
+        onNavigate: function(direction, itemIndex){
             console.log('Navigating '+direction+'. Current item: '+itemIndex);
-        }
+        },
         ...
-    });
+      });
 </script>
 <br>
 <h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">HOW TO USE THE COVID-19 SCHEDULING SYSTEM</h3>
