--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -4,35 +4,100 @@ Update Vaccine Information
 {% endblock %}
 
 {%block content%}
-<h1 class="text-center">Update Vaccine Information</h1>
-<div class="container mt-5 mb-5">
+<style>.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding: 0 0 0; /* Height of navbar */
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+    width: 300px;
+    z-index: 600;
+    }
+    
+    @media (max-width: 991.98px) {
+    .sidebar {
+    width: 100%;
+    }
+    }
+    .sidebar .active {
+    border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    }
+    
+    .sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    }</style>
+
+<div class="row"> 
+<div class="col-2">
+<nav id="sidebar" class="collapse d-lg-block sidebar collapse bg-dark">
+    <div class="position-sticky">
+      <div class="list-group" id="list-tab" role="tablist">
+        <a class="navbar-brand mt-2 mt-lg-0">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Resbakuna_logo.png/1200px-Resbakuna_logo.png"
+              height="90"
+              alt="RESBAKUNA DOH Logo"
+              loading="lazy"
+            />
+          </a>
+        <a class="list-group-item list-group-item-action active bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><i class="bi bi-house-door-fill">  Home</i></a>
+        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-profile-list"  href="{{ url_for('addvaccine') }}" role="tab" ><i class="bi bi-person-circle">
+          Profile</i></a>
+        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
+        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+      </div>
+      </div>
+</nav>
+</div>
+
+<div class="col-10">
+    <br>
+<div class="bg-light" style="font-family: 'Roboto Flex';"><div class="container-fluid">Home /</div></div>
+    <header class="py-4">
+        <div class="container-fluid py-2">
+            <h1 class="text-left " style="font-family: 'Montserrat';">UPDATE VACCINE INFORMATION</h1>
+        </div>
+        <div class="container-fluid py-2">
+            <a class="text-left " style="font-family: 'Montserrat';">You can modify all vaccines which are currently in your hospital's supply</h1>
+        </div>
+    </header>
+
+<section class="bg-white py-5">
+<div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="card">
                 <header class="card-header">
-                    <h4 class="card-title mt-2">Update Vaccine</h4>
+                    <h4 class="card-title mt-2" style="font-family: 'Roboto Flex';">Update Vaccine</h4>
                 </header>
                 <article class="card-body">
-                    <table class="table table-hover ">
+                    <table class="table table-bordered ">
                         <thead>
                             <tr><th scope="col">ID</th>
                                 <th scope="col">Vaccine</th>
-                                <th scope="col">Action</th>
+                                <th scope="col" style="text-align: center" >Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for item in s %}
                             {% include 'includes/vaccine_modal.html' %}
                                 <tr>
-                                    <td>{{ item.vaccine_id }}</td>
-                                    <td>{{ item.vaccine_name }}</td>
-                                    <td>
-                                        <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-update-{{ item.vaccine_id }}">Update</button>
-                                        <button class="btn btn-outline btn-danger" data-toggle="modal" data-target="#Modal-delete-{{ item.vaccine_id }}">Delete</button>
+                                    <td style="font-family: 'Roboto Flex';">{{ item.vaccine_id }}</td>
+                                    <td style="font-family: 'Roboto Flex';">{{ item.vaccine_name }}</td>
+                                    <td class="align-middle" style="text-align: center">
+                                        <button class="btn btn-outline btn-primary rounded-0 float-center" style="font-family: 'Roboto Flex';" data-toggle="modal" data-target="#Modal-update-{{ item.vaccine_id }}">Update</button>
+                                        <button class="btn btn-outline btn-danger rounded-0 float-center" style="font-family: 'Roboto Flex';" data-toggle="modal" data-target="#Modal-delete-{{ item.vaccine_id }}">Delete</button>
                                     </td>
                                 </tr>
                             {% endfor %}
-                            <a href="{{ url_for('addvaccine') }}" class="btn btn-info" role="button">Add Vaccine</a>
+                            <a href="{{ url_for('addvaccine') }}" class="btn btn-outline btn-primary rounded-0" role="button">Add Vaccine</a>
                             
                         </tbody>
                         
@@ -43,5 +108,10 @@ Update Vaccine Information
         </div>
     </div>
 </div>
+</section>
+</div>
+</div>
+
+
 {%endblock%}
 
