--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -29,6 +29,9 @@
       .main-panel {
   padding-left: 300px;
 }
+.alert {
+   padding-left: 300px !important;
+}
     </style>
     <div class="main-panel">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark nabar-fixed">
