--- a/templates/add.html
+++ b/templates/add.html
@@ -23,7 +23,9 @@
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     }
-    
+    .alert {
+   padding-left: 300px !important;
+}
     .sidebar-sticky {
     position: relative;
     top: 0;
@@ -45,39 +47,53 @@
                       loading="lazy"
                     />
                   </a>
-                <a class="list-group-item list-group-item-action active bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><i class="bi bi-house-door-fill">  Home</i></a>
-                <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-profile-list"  href="{{ url_for('addvaccine') }}" role="tab" ><i class="bi bi-person-circle">
-                  Profile</i></a>
-                <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                <a class="list-group-item list-group-item-action active bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-home-list" href="{{ url_for('vaccines') }}" role="tab" aria-controls="home"><i class="bi bi-house-door-fill">  Home</i></a>
+                <a class="list-group-item list-group-item-action bg-dark text-success text-center active" style="font-family: 'Roboto Flex';" id="list-profile-list"  href="{{ url_for('addvaccine') }}" role="tab" ><i class="bi bi-person-circle">
+                  Add Vaccine</i></a>
+                <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-messages-list" href="{{ url_for('.download_report') }}" role="tab" aria-controls="messages"><i class="bi bi-file-earmark-excel-fill"></i> Generate Report</a>
               </div>
               </div>
         </nav>
     </div>
 <div class="container mt-5 mb-5">
+    <br>
+    <div class="bg-light" style="font-family: 'Roboto Flex';"><div class="container-fluid">Add Vaccine /</div></div>
+        <header class="py-4">
+            <div class="container-fluid py-2">
+                <h1 class="text-left " style="font-family: 'Montserrat';">ADD VACCINE INFORMATION</h1>
+            </div>
+            <div class="container-fluid py-2">
+                <a class="text-left " style="font-family: 'Montserrat';">You can add vaccine information to include in your hospital's supply</a>
+            </div>
+        </header>
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="card">
                     <header class="card-header">
-                        <h4 class="card-title mt-2">Add Vaccine</h4>
+                        <h4 class="card-title mt-2"  style="font-family: 'Roboto Flex';">Add Vaccine</h4>
                     </header>
                     {% include 'includes/add_modal.html' %}
                     <form method="POST">
                         {{ form.hidden_tag() }}
                     <article class="card-body">
-                        <h6 class="card-text">Vaccine Name:</h6>
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Vaccine Name:</h6>
                         {{ form.vaccinename(class="form-control", placeholder="Vaccine Name") }}
-                        <h6 class="card-text">Vaccine Expiration Date:</h6>
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Vaccine Expiration Date:</h6>
                         {{ form.expiration(class="form-control", placeholder="Expiration Date") }}
-                        <h6 class="card-text">Vaccine Manufacturer:</h6>
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Vaccine Manufacturer:</h6>
                         {{ form.manufacturer(class="form-control", placeholder="Manufacturer") }}
-                        <h6 class="card-text">Vaccine Supplier:</h6>
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Vaccine Supplier:</h6>
                         {{ form.supplier(class="form-control", placeholder="Supplier") }}
-                        <h6 class="card-text">Additional Information:</h6>
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Additional Information:</h6>
                         {{ form.information(class="form-control", placeholder="Additional Information") }}
+                        <h6 class="card-text"  style="font-family: 'Roboto Flex';">Type of Vaccine</h6>
+                      <div class="form-group"  style="font-family: 'Roboto Flex';">
+                        {{ form.vaccinetype(class="form-control", placeholder="Type of Vaccine") }}
+                      </div>
                         <br>
+                        
                         <div class="d-grid gap-2">
-                            {{ form.add(class="btn btn-outline-success btn-block") }}
+                            {{ form.add(class="btn btn-outline-success btn-block rounded-0") }}
                         </div>
                     </article>
                 </form>
