--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -14,7 +14,9 @@ Update Vaccine Information
     width: 300px;
     z-index: 600;
     }
-    
+    .alert {
+   padding-left: 300px !important;
+}
     @media (max-width: 991.98px) {
     .sidebar {
     width: 100%;
@@ -36,25 +38,24 @@ Update Vaccine Information
 
 <div class="row"> 
 <div class="col-2">
-<nav id="sidebar" class="collapse d-lg-block sidebar collapse bg-dark">
-    <div class="position-sticky">
-      <div class="list-group" id="list-tab" role="tablist">
-        <a class="navbar-brand mt-2 mt-lg-0">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Resbakuna_logo.png/1200px-Resbakuna_logo.png"
-              height="90"
-              alt="RESBAKUNA DOH Logo"
-              loading="lazy"
-            />
-          </a>
-        <a class="list-group-item list-group-item-action active bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><i class="bi bi-house-door-fill">  Home</i></a>
-        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-profile-list"  href="{{ url_for('addvaccine') }}" role="tab" ><i class="bi bi-person-circle">
-          Profile</i></a>
-        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-        <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
-      </div>
-      </div>
-</nav>
+    <nav id="sidebar" class="collapse d-lg-block sidebar collapse bg-dark">
+        <div class="position-sticky">
+          <div class="list-group" id="list-tab" role="tablist">
+            <a class="navbar-brand mt-2 mt-lg-0">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Resbakuna_logo.png/1200px-Resbakuna_logo.png"
+                  height="80"
+                  alt="RESBAKUNA DOH Logo"
+                  loading="lazy"
+                />
+              </a>
+            <a class="list-group-item list-group-item-action active bg-dark text-success text-center active" style="font-family: 'Roboto Flex';" id="list-home-list" href="{{ url_for('vaccines') }}" role="tab" aria-controls="home"><i class="bi bi-house-door-fill">  Home</i></a>
+            <a class="list-group-item list-group-item-action bg-dark text-success text-center " style="font-family: 'Roboto Flex';" id="list-profile-list"  href="{{ url_for('addvaccine') }}" role="tab" ><i class="bi bi-person-circle">
+              Add Vaccine</i></a>
+            <a class="list-group-item list-group-item-action bg-dark text-success text-center" style="font-family: 'Roboto Flex';" id="list-messages-list" href="{{ url_for('.download_report') }}" role="tab" aria-controls="messages"><i class="bi bi-file-earmark-excel-fill"></i> Generate Report</a>
+          </div>
+          </div>
+    </nav>
 </div>
 
 <div class="col-10">
