--- a/templates/ViewAppointment.html
+++ b/templates/ViewAppointment.html
@@ -14,33 +14,111 @@
                             <div class="row">
                                   <div class="col">
                                     <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">First Name:</h6>
-                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ="{{view.user_information.first_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ="{{user.first_name}}"></li>
                                   </div>
                                   <div class="col">
                                     <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Middle Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ="{{view.user_information.middle_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ="{{user.middle_name}}"></li>
                                   </div>
                                 <div class="col">
                                     <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Last Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ="{{view.user_information.last_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ="{{user.last_name}}"></li>
                                   </div>
                             </div>
                         </div>
+
                          <br>
+
                          <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Registration Number:</h6>
-                         <input type="text" class="form-control" placeholder="Registration Number" aria-label="registrationnumber" readonly value ={{view.availability_details.id}}></li>
+
+                         {% if appoint %}
+                            <input type="text"
+                                    class="form-control"
+                                    placeholder="Registration Number"
+                                    aria-label="registrationnumber"
+                                    readonly
+                                    value ={{appoint.id}}>
+                        {% else %}
+                            <input type="text"
+                                    class="form-control"
+                                    placeholder="Registration Number"
+                                    aria-label="registrationnumber"
+                                    readonly
+                                    value ="None">
+                        {% endif %}
+
+                        </li>
                          <br>
                          <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Vaccine Name:</h6>
-                            <input type="text" class="form-control" placeholder="Vaccine Name" aria-label="vaccinename" readonly value="{{view.vaccine.vaccine_name}}"></li>
+                        
+                         {% if appoint %}
+                            <input type="text"
+                                    class="form-control"
+                                    placeholder="Vaccine Name"
+                                    aria-label="vaccinename"
+                                    readonly
+                                    value="{{view.vaccine.vaccine_name}}">
+                        {% else %}
+                            <input type="text"
+                                        class="form-control"
+                                        placeholder="Vaccine Name"
+                                        aria-label="vaccinename"
+                                        readonly
+                                        value="None">
+                        {% endif %}
+                        </li>
                         <br>
                          <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Vaccine Doses:</h6>
-                         <input type="text" class="form-control" placeholder="Vaccine Doses" aria-label="vaccinedoses" readonly value={{view.availability_details.availability_date}}></li>
+                        {% if appoint %}
+                            <input type="text"
+                                    class="form-control"
+                                    placeholder="Vaccine Doses"
+                                    aria-label="vaccinedoses"
+                                    readonly
+                                    value={{view.availability_details.availability_date}}></li>
+                        {% else %}
+                        <input type="text"
+                                class="form-control"
+                                placeholder="Vaccine Doses"
+                                aria-label="vaccinedoses"
+                                readonly
+                                value="None"></li>
+                        {% endif %}
+
                          <br>
                          <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Vaccination Site:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Site" aria-label="cvaccinesite" readonly value="{{view.hospital.hosp_name}}"></li>
+                         {% if appoint %}
+                             <input type="text"
+                                    class="form-control"
+                                    placeholder="Vaccination Site"
+                                    aria-label="cvaccinesite"
+                                    readonly
+                                    value="{{view.hospital.hosp_name}}"></li>
+                        {% else %}
+                        <input type="text"
+                                    class="form-control"
+                                    placeholder="Vaccination Site"
+                                    aria-label="cvaccinesite"
+                                    readonly
+                                    value="None"></li>
+                        {% endif %}
                           <br>
                          <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Vaccination Schedule:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Date" aria-label="vaccinesched" readonly value={{view.availability_details.availability_date}}></li>
+                         {% if appoint %}
+                         <input type="text"
+                                class="form-control"
+                                placeholder="Vaccination Date"
+                                aria-label="vaccinesched"
+                                readonly
+                                value={{view.availability_details.availability_date}}></li>
+                        {% else %}
+                        <input type="text"
+                                class="form-control"
+                                placeholder="Vaccination Date"
+                                aria-label="vaccinesched"
+                                readonly
+                                value="None"></li>
+                        {% endif %}
                     </article>
                 </div>
             </div>
