update fixes for ViewAppointment

--- a/templates/ViewAppointment.html
+++ b/templates/ViewAppointment.html
@@ -75,7 +75,7 @@
                                     placeholder="Vaccine Doses"
                                     aria-label="vaccinedoses"
                                     readonly
-                                    value={{view.availability_details.availability_date}}></li>
+                                    value={{user.dose_count}}></li>
                         {% else %}
                         <input type="text"
                                 class="form-control"
