--- a/templates/login_admin.html
+++ b/templates/login_admin.html
@@ -3,6 +3,7 @@
 {% extends "base_admin.html" %}
 {% block title %}Admin Login{% endblock %}
 {% block content %}
+{% block navbar %}{% endblock %}
 <div class="container mt-5 mb-5">
     <form method="POST" class="form-signin" >
         {{ form.hidden_tag() }}
