added sms notifier

--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -68,7 +68,8 @@
                     "value": key2,
                     "text": key2
                   }));
-                
+                  console.log(key2);
+                  console.log(key2);
                   var vac = document.getElementById('vac_type');
                   vac.value = value2[0];
                   var tim = document.getElementById('expected_time');
